# mtl_agent

./: .gitignore  README.md  experiments.ipynb  pipeline.py  pyproject.toml  translate_subtitle.ipynb  translate_subtitle.py  upload_videos.py  video_work.py
.github/workflows/: python-publish.yml
misc/: profile_default.schema.json  upload_properties.schema.json
mtl_agent/: __main__.py  pipeline.py  thumbnail.py  translate_subtitle.py  upload_videos.py  video_work.py
mtl_agent/providers/: animes_portal.py  base.py  tubebg.py  vbox7.py
notebooks/: experiments.ipynb
